# game

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  animation-inventory-game.json  build.bat  conftest.py  dev_hub.pyw  full_tree.txt  game-animation-inventory.json  launch_bootstrap.py  launcher.py  launcher.pyw  launcher_asset_viewer.pyw  launcher_pyw_bootstrap.py  launcher_test_baseline.py  launcher_test_baseline.pyw  launcher_test_dragon.py  launcher_test_dragon.pyw  launcher_test_flight.py  launcher_test_flight.pyw  launcher_test_hub.py  launcher_test_hub.pyw  launcher_test_journal.py  launcher_test_journal.pyw  launcher_test_manifest.py  launcher_test_manifest.pyw  launcher_test_mounts.py  launcher_test_mounts.pyw  launcher_test_movement.py  launcher_test_movement.pyw  launcher_test_music.py  launcher_test_music.pyw  launcher_test_parkour.py  launcher_test_parkour.pyw  launcher_test_player_anim_runtime.py  launcher_test_player_anim_runtime.pyw  launcher_test_sherward.py  launcher_test_sherward.pyw  (+13 more)
data/: ANIMATIONS_AVAILABLE.md  BLENDER_ART_PASS.md  BUILD_GAME_CORE_WINDOWS.md  DRAGON_ASSET_PIPELINE.md  ENEMY_MODEL_SOURCES.md  MIXAMO_MOUNT_FETCH.md  MULTIFILE_BUNDLES.md  MUSIC_RULES.md  TEST_LAUNCHERS.md  XBOT_SKELETON.md  asset_multifiles.json  audio_settings.json  authoring_studios.json  camera_profiles.json  companions.json  controls.json  cutscene_triggers.json  data_backend.json  graphics_settings.json  items.json  journal_entries.json  loading_screen.json  npcs.json  quests.json  save_backend.json  sky_config.json  spells.json  ui_strings.json  water_bodies.json  water_config.json  world_config.json
dev/: README.md  bake_level.py  custom_debugger.py  debugger_gui.pyw  dev_editor.sqlite3  dev_hub_config.json  editor_viewport_server.py  level_editor_window.py  studio_window.py
docs/: AGENT_GAMEPLAY_PLAYBOOK.md  BAM_AND_ANIMATION_PIPELINE.md  LOCATION_MESH_PIPELINE.md  TODO.md  VISUAL_SYSTEMS_AUDIT.md
launchers/: bootstrap.py  pyw_bootstrap.py  studio_asset_catalog.py  studio_dirty_state.py  studio_docking.py  studio_logic_graph.py  studio_manifest.py  studio_node_catalog.py  studio_preview.py  studio_properties.py  studio_session.py  studio_story_inspector.py  studio_workspace_state.py  studio_workspace_tree.py
models/: SHERWARD_BLENDER_PIPELINE.md  blender.crash.txt  blender_head_swap.py  blender_log.txt  build_sherward_base.py  character.blend  check_state.py  generate_character.py  refine_sherward_likeness.py  run_batch.ps1  test_xbot_out.blend
qa_test_output_threads/: qa.sqlite3  report.html  summary.json
release/: README.md  SETUP_FILE_MAP.md  build_installer.ps1  build_player_exe.ps1
scripts/: __init__.py  asset_animation_viewer.py  baseline_report.py  book_visual_conformance_report.py  build_data_backend.py  build_game_core.py  smoke_report.py  (+14 more)
(+658 files in other folders)
