[tool.poetry]
name = "game"
version = "0.1.0"
description = "A Python game project"
authors = ["Efrem99 <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"